[package]
name = "atom"
version = "0.1.0"
edition = "2021"

[dependencies]
bootloader = { version = "0.9.8", features = ["map_physical_memory"] }
spin = "0.9.4"
volatile = "0.4.5"
x86_64 = "0.14.2"
uart_16550 = "0.2.0"
pic8259 = "0.10.1"
pc-keyboard = "0.5.0"
linked_list_allocator = "0.9"
crossbeam-queue = { version = "0.3.8", default-features = false, features = [
    "alloc",
] }
tracing = { version = "0.1.37", default-features = false, features = ["log"] }
futures-util = { version = "0.3.25", default-features = false, features = [
    "alloc",
] }
conquer-once = { version = "0.3.2", default-features = false }
log = { version = "0.4.17", default-features = false }
slab = { version = "0.4.7", default-features = false }

[package.metadata.bootimage]
build-command = ["build"]
run-command = ["qemu-system-x86_64", "-drive", "format=raw,file={}"]
test-args = [
    "-device",
    "isa-debug-exit,iobase=0xf4,iosize=0x04",
    "-serial",
    "stdio",
    "-display",
    "none",
]
test-success-exit-code = 33
test-timeout = 300

[[test]]
name = "should_panic"
harness = false

[[test]]
name = "stack_overflow"
harness = false
